--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=preProject311
+# Database config
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/schema_pre_project231
+spring.datasource.username=root
+spring.datasource.password=root
+# Hibernate config
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
